# bs-decode

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  bs-decode.opam  bs-decode.opam.template  bsconfig.json  docs.html  dune  dune-project  index.html  package-lock.json  package.json  sitemap.xml  users.html
.circleci/: config.yml
.github/workflows/: ci.yml
css/: main.css
docs/: decoding-objects.html  decoding-objects.md  decoding-optional-values.html  decoding-optional-values.md  decoding-simple-values.html  decoding-simple-values.md  decoding-variants.html  decoding-variants.md  handling-errors.html  handling-errors.md  index.html  installation.html  installation.md  return-types.html  return-types.md  simple-example.html  simple-example.md  upgrading-to-v2.md  what-and-why.html  what-and-why.md  working-with-errors.html  working-with-errors.md
docs/decoding-objects/: index.html
docs/decoding-optional-values/: index.html
docs/decoding-simple-values/: index.html
docs/decoding-variants/: index.html
docs/installation/: index.html
docs/return-types/: index.html
docs/simple-example/: index.html
docs/what-and-why/: index.html
docs/working-with-errors/: index.html
en/: docs.html  index.html  users.html
example/: github_data.json
src/: Decode.re  DecodeAsOption.re  DecodeAsResult.re  DecodeAsStringNel.re  DecodeBase.re  DecodeError.re  DecodeFailure.re  Decode_AsOption.re  Decode_AsOption.rei  Decode_AsResult_OfParseError.re  Decode_AsResult_OfParseError.rei  Decode_AsResult_OfStringNel.re  Decode_AsResult_OfStringNel.rei  Decode_Base.re  Decode_NonEmptyList.re  Decode_ParseError.re  Decode_ParseError.rei  Decode_Pipeline.re  ResultDecodeError.re  Schema_Base.re  dune
src/util/: DecodeFailure.re  ResultOfDecodeFailure.re
test/: Decode_AsOption_test.re  Decode_AsResult_OfCustom_test.re  Decode_AsResult_OfParseError_test.re  Decode_AsResult_OfStringNel_test.re  Decode_Option_test.re  Decode_Pipeline_test.re  Decode_Result_Custom_test.re  Decode_Result_Pipeline_test.re  Decode_Result_test.re  Decode_test.re  dune
test/utils/: BigJson.json  Decode_TestSampleData.re
website/: README.md  package-lock.json  package.json  sidebars.json  siteConfig.js
website/core/: Footer.js
website/i18n/: en.json
website/pages/en/: docs.js  index.js  users.js
website/static/css/: custom.css
