opam-version: "2.0"
synopsis: "BS Decode"
description: "Type-safe JSON decoding for ReasonML and OCaml"
maintainer: ["Michael Martin"]
authors: ["Michael Martin"]
license: "MIT"
homepage: "https://github.com/mlms13/bs-decode"
bug-reports: "https://github.com/mlms13/bs-decode/issues"
depends: [
  "dot-merlin-reader" {dev}
  "dune" {dev}
  "melange" {dev}
  "melange-compiler-libs" {dev}
  "ocaml" {>= "4.14.0" & < "5.0.0"}
  "reason" {>= "3.8.1" & < "4.0.0"}
  "ocaml-lsp-server" {dev}
  "odoc" {with-doc}
]
pin-depends: [
  [ "dune.dev" "git+https://github.com/ocaml/dune.git#a0dd51512f269d7c18f0c6216ab66d3ab7368da2" ]
  [ "melange-compiler-libs.dev" "git+https://github.com/melange-re/melange-compiler-libs.git#48ff923f2c25136de8ab96678f623f54cdac438c" ]
  [ "melange.dev" "git+https://github.com/melange-re/melange.git#cb1962c15799b2c4045121a280d83600ece3bb59" ]
]
