(subdir
 node_modules
 (vendored_dirs melange.belt)
 (data_only_dirs bs-jest bs-bastet relude))

(subdir
 node_modules/@glennsl/bs-jest/src
 (library
  (name jest)
  (modes melange)))

(subdir
 node_modules/bs-bastet/bastet/src
 (library
  (name bsBastet)
  (modes melange)
  (flags -w -67)))

(subdir
 node_modules/relude/src
 (include_subdirs unqualified)
 (library
  (name relude)
  (modes melange)
  (libraries bsBastet)))
