(lang dune 3.8)

(using directory-targets 0.1)

(using melange 0.1)

(name bs-decode)

(license "MIT")

(maintainers Michael Martin)

(authors Michael Martin)

(homepage https://github.com/mlms13/bs-decode)

(bug_reports https://github.com/mlms13/bs-decode/issues)

(package
 (allow_empty)
 (name bs-decode)
 (synopsis "Type-safe JSON decoding for ReasonML and OCaml")
 (description "Type-safe JSON decoding for ReasonML and OCaml"))
